chore : add some word and riverpod

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,53 @@
   "@helloWorld": {
     "description": "The conventional newborn programmer greeting"
   },
+  "slogan": "Chap Chap",
+  "phoneLoginTitle": "Enter Your Contact Details",
+  "phoneLoginSubtitle": "Enter your phone number we will send you a verification code",
+  "sendCode": "Send verification code",
+  "phoneNumber": "Phone Number",
+  "verificationCodePlaceholder": "Enter verification code",
+  "verificationCodeTitle": "Enter Verification Code",
+  "sendCodeAgain": "Send code again",
+  "sendYouSMS": "We sent you an SMS",
+  "resendCode": "Resend code in",
+  "verificationCode": "Verification Code",
+  "verifyCode": "Verify code",
+  "pleaseEnterYourVerificationCode": "Please enter the code we just sent to ",
+  "name": "Name",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "email": "Email",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "createAccount": "Create Account",
+  "next": "Next",
+  "alreadyHaveAccount": "Already have an account?",
+  "login": "Login",
+  "logout": "Logout",
+  "profile": "Profile",
+  "settings": "Settings",
+  "byCreatingAccount": "By creating an account you agree to our",
+  "termsOfService": "Terms of Service",
+  "termOfUs": "Terms of Use",
+  "and": "and",
+  "privacyPolicy": "Privacy Policy",
+  "forgotPassword": "Forgot Password?",
+  "backToLogin": "Back to Login",
+  "shareLocation": "Share Location",
+  "location": "Location",
+  "continue": "Continue",
+  "Man": "Man",
+  "Woman": "Woman",
+  "addPhoto": "Add Photo",
+  "uploadPhoto": "Upload Photo",
+  "addProfilePicture": "Add Profile Picture",
+  "uploadProfilePicture": "Upload Profile Picture",
+  "takeASelfie": "Take a selfie",
+  "chooseFormGallery": "Choose from Gallery",
+  "takeAPhoto": "Take a Photo",
+  "takePhotoMessage": "Help drivers or riders identify you more easily, this increases trust.",
   "welcomeMessage": "Welcome to my app",
-  "loginButton": "Log In"
+  "loginButton": "Log In",
+  "trips": "trips"
 }
