--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,5 +1,55 @@
 {
   "helloWorld": "Bonjour le monde",
+  "@helloWorld": {
+    "description": "La salutation conventionnelle du programmeur nouveau-né"
+  },
+  "slogan": "Chap Chap",
+  "phoneLoginTitle": "Entrez vos coordonnées",
+  "phoneLoginSubtitle": "Entrez votre numéro de téléphone, nous vous enverrons un code de vérification",
+  "sendCode": "Envoyer le code de vérification",
+  "phoneNumber": "Numéro de téléphone",
+  "verificationCodePlaceholder": "Entrez le code de vérification",
+  "verificationCodeTitle": "Entrez le code de vérification",
+  "sendCodeAgain": "Renvoyer le code",
+  "sendYouSMS": "Nous vous avons envoyé un SMS",
+  "resendCode": "Renvoyer le code dans",
+  "verificationCode": "Code de vérification",
+  "verifyCode": "Vérifier le code",
+  "pleaseEnterYourVerificationCode": "Veuillez saisir le code que nous venons d'envoyer à ",
+  "name": "Nom",
+  "firstName": "Prénom",
+  "lastName": "Nom de famille",
+  "email": "E-mail",
+  "password": "Mot de passe",
+  "confirmPassword": "Confirmez le mot de passe",
+  "createAccount": "Créer un compte",
+  "next": "Suivant",
+  "alreadyHaveAccount": "Vous avez déjà un compte ?",
+  "login": "Connexion",
+  "logout": "Déconnexion",
+  "profile": "Profil",
+  "settings": "Paramètres",
+  "byCreatingAccount": "En créant un compte, vous acceptez nos",
+  "termsOfService": "Conditions d'utilisation",
+  "termOfUs": "Conditions d'utilisation",
+  "and": "et",
+  "privacyPolicy": "Politique de confidentialité",
+  "forgotPassword": "Mot de passe oublié ?",
+  "backToLogin": "Retour à la connexion",
+  "shareLocation": "Partager la position",
+  "location": "Position",
+  "continue": "Continuer",
+  "Man": "Homme",
+  "Woman": "Femme",
+  "addPhoto": "Ajouter une photo",
+  "uploadPhoto": "Télécharger une photo",
+  "addProfilePicture": "Ajouter une photo de profil",
+  "uploadProfilePicture": "Télécharger une photo de profil",
+  "takeASelfie": "Prendre un selfie",
+  "chooseFormGallery": "Choisir dans la galerie",
+  "takeAPhoto": "Prendre une photo",
+  "takePhotoMessage": "Aidez les chauffeurs ou les passagers à vous identifier plus facilement, cela augmente la confiance.",
   "welcomeMessage": "Bienvenue sur mon application",
-  "loginButton": "Se connecter"
+  "loginButton": "Se connecter",
+  "trips": "voyages"
 }
