refactor: remove all deadcode

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -38,9 +38,8 @@
   "backToLogin": "Back to Login",
   "shareLocation": "Share Location",
   "location": "Location",
-  "continue": "Continue",
-  "Man": "Man",
-  "Woman": "Woman",
+  "man": "Man",
+  "woman": "Woman",
   "addPhoto": "Add Photo",
   "uploadPhoto": "Upload Photo",
   "addProfilePicture": "Add Profile Picture",
