--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -38,9 +38,8 @@
   "backToLogin": "Retour à la connexion",
   "shareLocation": "Partager la position",
   "location": "Position",
-  "continue": "Continuer",
-  "Man": "Homme",
-  "Woman": "Femme",
+  "man": "Homme",
+  "woman": "Femme",
   "addPhoto": "Ajouter une photo",
   "uploadPhoto": "Télécharger une photo",
   "addProfilePicture": "Ajouter une photo de profil",
