feat: Add ride search functionality with location parameters and UI updates

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -50,5 +50,11 @@
   "takePhotoMessage": "Help drivers or riders identify you more easily, this increases trust.",
   "welcomeMessage": "Welcome to my app",
   "loginButton": "Log In",
-  "trips": "trips"
+  "trips": "trips",
+  "homeGreetingMessage": "What would you like to do today?",
+  "today": "Today",
+  "tomorrow": "Tomorrow",
+  "person": "Person",
+  "people": "People"
+
 }
