feat: Enhance ride search and detail pages with new localizations, input validation, and refactor parameter passing to query strings.

--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -55,5 +55,30 @@
   "today": "Aujourd'hui",
   "tomorrow": "Demain",
   "person": "Person",
-  "people": "Personnes"
+  "people": "Personnes",
+  "hello": "Bonjour",
+  "searchFromPlaceholder": "De ?",
+  "searchToPlaceholder": "Vers ?",
+  "howManySeats": "Combien de sièges voulez-vous ?",
+  "confirm": "Confirmer",
+  "findARide": "Rechercher un trajet",
+  "selectDepartureLocationError": "Veuillez sélectionner un lieu de départ",
+  "selectDestinationError": "Veuillez sélectionner une destination",
+  "selectPassengerError": "Veuillez sélectionner au moins un passager",
+  "noRidesFound": "Aucun trajet trouvé.",
+  "seats": "Sièges",
+  "passenger": "Passager",
+  "passengers": "Passagers",
+  "availableRides": "TRAJETS DISPONIBLES",
+  "bookRide": "RÉSERVER UN TRAJET",
+  "departure": "Départ",
+  "from": "DE",
+  "to": "À",
+  "pickUp": "RAMASSAGE",
+  "dropOff": "DÉPOSE",
+  "start": "Début",
+  "end": "Fin",
+  "driver": "Chauffeur",
+  "totalPrice": "Prix total",
+  "errorPrefix": "Erreur : {error}"
 }
